k8s/mediaserver/calibreweb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibreweb
  namespace: mediaserver
  labels:
    app: calibreweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibreweb
  template:
    metadata:
      labels:
        app: calibreweb
    spec:
      containers:
        - name: calibreweb
          image: lscr.io/linuxserver/calibre-web:latest
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data/books
              name: books

      volumes:
        - name: config
          nfs:
            server: 192.168.100.61
            path: /mnt/fast-pool1/docker-configs/calibreweb
        - name: books
          nfs:
            server: 192.168.100.61
            path: /mnt/slow-pool/library/books
