k8s/mediaserver/calibreweb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibreweb
  namespace: mediaserver
spec:
  rules:
    - host: "calibreweb.enricoruggieri.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: calibreweb-service
                port:
                  number: 8083
